Edited to reflect prerelase status. Noted the param changes in XTandem. Added new update site.

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -197,7 +197,7 @@
 
 % define that this tutorial is based on a prerelease of OpenMS (will output some additional notes)
 \newtoggle{isprerelease}
-\togglefalse{isprerelease}
+\toggletrue{isprerelease}
 
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
