--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -2,16 +2,17 @@
 
 % File names are changed quite often between tutorial so make them configurable at the top.
 % Please escape whitespaces except before and after / as a path separator.
-\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ Full\ 3.4.1\ Installer\ (64bit).exe}	
+\newcommand{\WindowsKnimeInstallerName}{Windows / KNIME\ 3.4.1\ Installer\ (64bit).exe}	
 \newcommand{\WindowsOpenMSInstallerName}{Windows / OpenMS-2.3.0\_Win64.exe}	
 \newcommand{\WindowsOpenMSPrereqInstallerName}{Windows / OpenMS-2.3-prerequisites-installer.exe}
-\newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-2.3/OpenMS-2.3-prerequisites-installer.exe/download}
+\newcommand{\WindowsPrerequisitesLink}{https://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-2.3/OpenMS-2.3-prerequisites-installer.exe/download}
 \newcommand{\WindowsDefaultPWizFolder}{C: / Program\ Files / OpenMS-2.3.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
-\newcommand{\MacKnimeInstallerName}{Mac / knime-full\_3.4.1.app.macosx.cocoa.x86\_64.dmg}	
+\newcommand{\MacKnimeInstallerName}{Mac / knime\_3.4.1.app.macosx.cocoa.x86\_64.dmg}	
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.3.0-Darwin.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.org/analytics-platform/3.4}
 \newcommand{\KnimeTrustedSite}{http://tech.knime.org/update/community-contributions/trusted/3.4}
 \newcommand{\KnimeTrunkSite}{http://tech.knime.org/update/community-contributions/trunk/}
+\newcommand{\OpenMSSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/}
 
 \setcounter{equation}{0}
 
@@ -39,6 +40,8 @@ on \textbf{macOS} you call
 \end{itemize}
 
 and follow the instructions. For the OpenMS installation on \textbf{macOS}, you need to accept the license drag and drop the OpenMS folder into your Applications folder.
+\note{Due to increasing security measures for downloaded apps (e.g. path randomization) on \textbf{macOS} you might need to open TOPPView.app and TOPPAS.app while holding \keys{\ctrl} and accept the warning.
+If the app still does not open, you might need to move them from \directory{Applications / OpenMS-2.3.0} to e.g. your Desktop and back.}
 On \textbf{Linux} you can extract KNIME to a folder of your choice and for TOPPView you need to install OpenMS via your package manager or build it on your own with the instructions under \href{https://www.openms.de/documentation}{www.openms.de/documentation}.
 
 \subsubsection{Installation from the internet}
@@ -109,7 +112,7 @@ We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. P
 We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set:
 
 \begin{itemize}
-\item Start \OPENMSTOOL{TOPPView} (see Windows' Start-Menu or \directory{Applications/OpenMS} on macOS)
+\item Start \OPENMSTOOL{TOPPView} (see \textbf{Windows}' Start-Menu or \directory{Applications/OpenMS-2.3.0} on \textbf{macOS})
 \item Go to \menu{File > Open File}, navigate to the directory where you copied the contents of the USB stick to,
       and select
       \directory{Example\_Data / Introduction / datasets / small / velos005614.mzML}
@@ -174,7 +177,6 @@ the most important concepts will also be reviewed in this tutorial.
 \subsubsection{Plugin and dependency installation}
 \label{Install_plugins}
 \note{If you chose the KNIME installer that contains all community contributions, or you received the full installer on our USB Stick you can skip this section. This is usually the preferred way but only works for stable releases that were available at the time the full release of KNIME was created. For bleeding edge functionality (as provided through the KNIME nightly community contributions or in the case we cover prereleases of OpenMS) you need to perform the actions below to download the plugin from official update sites.}
-
 Before we can start with the tutorial we need to install all the required extensions for KNIME. Since KNIME 3.2.1 the program automatically
 detects missing plugins when you open a workflow but to make sure that the right source for OpenMS is chosen, please follow the instructions here.
 First, we install some additional extensions that are required by our OpenMS nodes or used in the Tutorials e.g. for visualization and file handling.
@@ -218,18 +220,18 @@ Now you need to decide which OpenMS nodes you want to install. You may choose be
 
 \iftoggle{isprerelease}
 {
- \note{For this tutorial we use the \textbf{bleeding edge, nightly release} version of OpenMS because it corresponds to a prerelease of the new OpenMS version. While not being a full release, it was nevertheless intensively tested to ensure its functionality for this tutorial. For regular use we still recommend using the latest stable OpenMS release. Please also note that some of the workflows shown here require new functionality contained only in the prerelease version of OpenMS. These will likely not work if transferred to the current stable, but older OpenMS version.}
+ \note{For this tutorial we use a release candidate of the new OpenMS version. While not being a full release, it was nevertheless intensively tested to ensure its functionality for this tutorial. For regular use we still recommend using the latest stable OpenMS release. Please also note that some of the workflows shown here require new functionality contained only in the prerelease version of OpenMS. These will likely not work if transferred to the current stable, but older OpenMS version.}
 
-Instructions for the bleeding edge, nightly release:
+Instructions for the prerelease:
 \begin{itemize}
- % If you base the tutorial on the nightly contributions (not recommended - more of a emergency measure)
-  \item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
-  \textit{Name:} \texttt{Trunk Community Contributions} \\
-  \textit{Location:} \menu{\KnimeTrunkSite}
-  \item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
-  \item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop-down list.
-  \item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
-  \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
+	% If you base the tutorial on the RC update site (not recommended - more of a emergency measure)
+	\item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
+	\textit{Name:} \texttt{OpenMS Update Site} \\
+	\textit{Location:} \menu{\OpenMSSite}
+	\item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
+	\item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop-down list.
+	\item Select the \textbf{OpenMS} and \textbf{GKN} nodes.
+	\item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
 \end{itemize}
 }
 {
@@ -239,17 +241,16 @@ Instructions for the stable release (recommended):
   \item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
   \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
 \end{itemize}
-
-Instructions for the unstable, nightly release:
+Instructions for the bleeding edge, nightly release:
 \begin{itemize}
- % If you base the tutorial on the nightly contributions (not recommended - more of a emergency measure)
-  \item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
-  \textit{Name:} \texttt{Trunk Community Contributions} \\
-  \textit{Location:} \menu{\KnimeTrunkSite}
-  \item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
-  \item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop-down list.
-  \item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
-  \item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
+	% If you base the tutorial on the nightly contributions (not recommended - more of a emergency measure)
+	\item \label{it:add_site} In the now open dialog choose \menu{Add...} (in the upper right corner of the dialog) to define a new update site. In the opening dialog enter the following details. \\
+	\textit{Name:} \texttt{Trunk Community Contributions} \\
+	\textit{Location:} \menu{\KnimeTrunkSite}
+	\item \label{it:select_site} After pressing \keys{OK} KNIME will show you all the contents of the added Update Site.
+	\item \textbf{Note:} From now on, you can use this repository for plugins in the \menu{Work with:} drop-down list.
+	\item Select the \textbf{OpenMS} nodes in the category: \\ "KNIME Community Contributions - Bioinformatics \& NGS" and click \keys{Next}.
+	\item Follow the instructions and after a restart of KNIME the OpenMS nodes will be available in the Node repository under “Community Nodes”.
 \end{itemize}
 }
 
