[REFACTOR] Update figures with old node glyphs to new version
Also decrease top and bottom margin a bit and prevent note box
from page-breaking.

--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -68,7 +68,7 @@ You can find a small RAW file on the USB stick:
 \directory{Example\_Data / Introduction / datasets / raw}.
 
 \subsubsection{MSConvertGUI}
-MSConvertGUI (see Figure~\ref{fig:MSConvertGUI}) exposes the main parameters for data conversion in a convenient graphical user interface.
+MSConvertGUI (see Fig.~\ref{fig:MSConvertGUI}) exposes the main parameters for data conversion in a convenient graphical user interface.
 
 \begin{figure}
 \centering
