--- a/Handout/openswath.tex
+++ b/Handout/openswath.tex
@@ -106,7 +106,7 @@ In addition to the target assays, OpenSWATH further requires decoy assays in the
 The flag \texttt{-append} generates an output TraML with the complete set of decoy and target assays. The flag \texttt{-exclude\_similar} is used to exclude decoys which are very similar to the target assays.  
 
 \subsection{OpenSWATH KNIME}
-An example KNIME workflow for OpenSWATH is supplied in \directory{Workflows/} (Figure~\ref{fig:openswath}). The example dataset can be used for this workflow (filenames in brackets):
+An example KNIME workflow for OpenSWATH is supplied in \directory{Workflows/} (Fig.~\ref{fig:openswath}). The example dataset can be used for this workflow (filenames in brackets):
 
 \begin{enumerate}
   \item Open \directory{Workflows / OpenSWATH / OpenSWATH.zip} in KNIME: \menu{File > Import KNIME Workflow...}.
