--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -304,7 +304,7 @@ on the USB stick into the following directory of your KNIME installation (versio
 	\item macOS \newline \directory{ Applications/ KNIME 3.3.app / Contents / Eclipse / plugins / \newline 
 de.openms.macosx.x86\_64\_2.1.0.201611191105 / payload / share / OpenMS / CHEMISTRY}
 \end{itemize}
-Now construct the workflow as shown in Figure~\ref{fig:speclib}.
+Now construct the workflow as shown in Fig.~\ref{fig:speclib}.
 Use the file \directory{Example\_Data / Metabolomics / datasets \newline / Metabolite\_ID\_SpectraDB\_positive.mzML} as input for your workflow. It contains tandem spectra that are identified by the \KNIMENODE{MetaboliteSpectralMatcher}. The resulting mzTab file is read back into a KNIME table and stored in an Excel table. Make sure that you connect the MzTabReader port corresponding to the Small Molecule Section to the \KNIMENODE{Excel writer (XLS)}).
 
 \end{task}
