--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -241,6 +241,16 @@
 
 \include{labelfree}
 
+\include{protein_inference}
+
+\include{metabolomics}
+
+\include{openswath}
+
+\include{pyopenms}
+
+\include{qualitycontrol}
+
 \include{troubleshooting}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
