changed file format of svg to png

--- a/Handout/labelfree.tex
+++ b/Handout/labelfree.tex
@@ -168,7 +168,7 @@ Every row in this table corresponds to a so-called consensus feature, i.e., a pe
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/labelfree/data_analysis}
+  \includegraphics[width=0.85\textwidth]{graphics/labelfree/data_analysis.png}
   \caption{Simple KNIME data analysis example for LFQ.}
   \label{fig:lfq_data_analysis}
 \end{figure}
