--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -111,15 +111,15 @@ OpenMS provides a convenient viewer for some of the data: \OPENMSTOOL{TOPPView}.
 \end{figure}
 
 We will guide you through some of the basic features of \OPENMSTOOL{TOPPView}. Please familiarize yourself with the key controls and visualization methods.
-We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set:
+We will make use of these later throughout the tutorial. Let's start with a first look at one of the files of our tutorial data set. Conceptually, there are no differences in visualizing metabolomic or proteomic data. Here, we inspect a simple proteomic measurement:
 
 \begin{itemize}
 \item Start \OPENMSTOOL{TOPPView} (see \textbf{Windows}' Start-Menu or \directory{Applications/OpenMS-2.3.0} on \textbf{macOS})
 \item Go to \menu{File > Open File}, navigate to the directory where you copied the contents of the USB stick to,
       and select
       \directory{Example\_Data / Introduction / datasets / small / velos005614.mzML}
-      . This file contains a reduced LC-MS map (only a selected RT and m/z range
-      was extracted using the TOPP tool \OPENMSTOOL{FileFilter}) of a label-free measurement of the human platelet proteome recorded on an Orbitrap velos.
+      . This file contains only a reduced LC-MS map \footnote{only a selected RT and m/z range
+      was extracted using the TOPP tool \OPENMSTOOL{FileFilter}} of a label-free proteomic platelet measurement recorded on an Orbitrap velos.
       The other two mzML files contain technical replicates of this experiment.
       First, we want to obtain a global view on the whole LC-MS map - the default option \textit{Map view 2D} is the correct one and we can click the \menu{Ok} button. 
 \item Play around.
