--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -100,8 +100,7 @@ To convert all RAW files in a folder may write:
 \newline
 \menu{msconvert *.RAW -o my\_output\_dir}
 \newline
-\note{To display all options you may type \menu{msconvert -{}-help}. Additional information is
-available on the ProteoWizard web page.}
+\note{To display all options you may type \menu{msconvert -{}-help}. Additional information is available on the ProteoWizard web page.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
